# Aakar

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  aakar-sandbox-design.html  difference  docker-compose.yml  gg.json
.agents/skills/apply-pattern/: SKILL.md
.agents/skills/solid-review/: SKILL.md
.claude/: launch.json
.claude/skills/clean-architecture-check/: SKILL.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/aakar_api/: __init__.py  di.py  main.py
backend/src/aakar_api/adapters/: __init__.py  base.py  catalog.py  generic.py  llama_family.py  registry.py
backend/src/aakar_api/adapters/building/: __init__.py  block_builder.py  param_formulas.py
backend/src/aakar_api/api/: __init__.py  cors.py  dependencies.py  errors.py  routes.py  server_errors.py
backend/src/aakar_api/application/: __init__.py  architecture_service.py  hub_service.py  interfaces.py  operations_service.py  paper_service.py  repo_service.py  source_service.py
backend/src/aakar_api/domain/: __init__.py  exceptions.py  hub.py  model_config.py  research.py  spec.py
backend/src/aakar_api/infrastructure/: __init__.py  arxiv_client.py  fallback_citation_client.py  fallback_introspector.py  github_client.py  hf_config_repository.py  hub_cache.py  hub_client.py  lazy_introspector.py  openalex_client.py  paper_cache.py  redis_spec_cache.py  sandboxed_introspector.py  semantic_scholar_client.py  spec_cache.py  tiered_spec_cache.py  transformers_introspector.py  ttl_cache.py
backend/src/aakar_api/infrastructure/introspection/: __init__.py  _naming.py  config_loader.py  fx_operations.py  model_builder.py  model_metadata.py  naming.py  node_metadata.py  node_walker.py  role.py  spec_builder.py  walk_context.py
backend/src/aakar_api/infrastructure/sandbox/: __init__.py  runner.py  snapshot.py  worker.py
backend/tests/: conftest.py
backend/tests/fixtures/: llama3_8b.json  mistral_7b.json  qwen2_7b.json  qwen3_06b_tied.json
backend/tests/integration/: test_architecture_route.py  test_hub_routes.py  test_paper_routes.py  test_repo_source_routes.py  test_sandbox_e2e.py
backend/tests/smoke/: conftest.py  test_e2e.py  test_versions.py
backend/tests/unit/: test_arxiv_client.py  test_block_builder.py  test_config_loader.py  test_fallback_citation_client.py  test_fallback_introspector.py  test_fx_operations.py  test_generic_adapter.py  test_github_client.py  test_hub_cache.py  test_hub_client.py  test_hub_service.py  test_introspector.py  test_lazy_introspector.py  test_llama_adapter.py  test_node_metadata.py  test_openalex_client.py  test_paper_service.py  test_param_formulas.py  test_redis_spec_cache.py  test_repo_service.py  test_role.py  test_sandboxed_introspector.py  test_semantic_scholar_client.py  test_spec_cache.py  test_tiered_spec_cache.py  test_walk_context.py
docs/: adapters.md  architecture.md  block-types.md  introspection.md  spec-contract.md
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
frontend/scripts/: generate-popular-models.mjs
frontend/src/: App.module.css  App.tsx  main.tsx
frontend/src/application/: errorMessage.ts  interfaces.ts  loadError.test.ts  loadError.ts  useArchitecture.test.ts  useArchitecture.ts  useCompareModel.ts  useCompareModels.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useModelInfo.ts  useModelSearch.test.ts  useModelSearch.ts  useNavigation.ts  useReportCardLoading.ts  useResearch.ts  useRetryLoad.test.ts  useRetryLoad.ts  useSelection.ts  useTheme.test.ts  useTheme.ts  useUrlSync.ts  (+2 more)
frontend/tests/: importCasing.test.ts  setup.ts
(+412 files in other folders)
